# ChangeLog for kde-base/kdepim-runtime
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-runtime/ChangeLog,v 1.44 2011/07/27 14:04:38 alexxy Exp $

*kdepim-runtime-4.7.0 (27 Jul 2011)

  27 Jul 2011; Alexey Shvetsov <alexxy@gentoo.org>
  +kdepim-runtime-4.7.0.ebuild:
  Version bump KDE SC 4.7.0

*kdepim-runtime-4.6.1 (11 Jul 2011)

  11 Jul 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdepim-runtime-4.6.1.ebuild:
  Version bump KDEPIM 4.6.1

  09 Jun 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  -kdepim-runtime-4.5.95-r1.ebuild:
  Remove KDEPIM 4.5.95

*kdepim-runtime-4.6.0 (09 Jun 2011)

  09 Jun 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdepim-runtime-4.6.0.ebuild:
  Version bump KDEPIM 4.6.0

  02 Jun 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdepim-runtime-4.4.9.ebuild, -kdepim-runtime-4.4.10.ebuild:
  Drop kdepim 4.4.9 and 4.4.10

  01 Jun 2011; Brent Baude <ranger@gentoo.org>
  kdepim-runtime-4.4.11.1.ebuild:
  Marking kdepim-runtime-4.4.11.1 ppc stable for bug 354033

  09 May 2011; Markos Chandras <hwoarang@gentoo.org>
  kdepim-runtime-4.4.11.1.ebuild:
  Stable on amd64 wrt bug #354033

*kdepim-runtime-4.5.95-r1 (09 May 2011)

  09 May 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdepim-runtime-4.5.95.ebuild, +kdepim-runtime-4.5.95-r1.ebuild:
  Revision bump to punt translations. Only l10n is allowed to do them.

  09 May 2011; Thomas Kahle <tomka@gentoo.org> kdepim-runtime-4.4.11.1.ebuild:
  x86 stable per bug 354033

*kdepim-runtime-4.5.95 (23 Apr 2011)

  23 Apr 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdepim-runtime-4.5.95.ebuild:
  Version bump KDEPIM 4.5.95 (4.6 beta 5)

  22 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  kdepim-runtime-4.4.11.1.ebuild:
  Correctly depend on kde-4.6

*kdepim-runtime-4.4.11.1 (21 Apr 2011)

  21 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kdepim-runtime-4.4.11.1.ebuild:
  Version bump
