@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-runtime/Attic/kdepim-runtime-4.4.11.1.ebuild,v 1.5 2011/06/01 19:39:28 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-runtime/Attic/kdepim-runtime-4.4.11.1.ebuild,v 1.6 2011/07/31 20:28:37 dilfridge Exp $
 
 EAPI=4
 
@@ -19,10 +19,9 @@ IUSE="debug"
 RESTRICT="test"
 # Would need test programs _testrunner and akonaditest from kdepimlibs
 
-DEPEND="
+COMMON_DEPEND="
 	app-misc/strigi
 	>=app-office/akonadi-server-1.3.1
-	dev-libs/boost
 	dev-libs/libxml2:2
 	dev-libs/libxslt
 	$(add_kdebase_dep kdelibs 'semantic-desktop' 4.6)
@@ -30,7 +29,10 @@ DEPEND="
 	$(add_kdebase_dep libkdepim)
 	x11-misc/shared-mime-info
 "
-RDEPEND="${DEPEND}
+DEPEND="${COMMON_DEPEND}
+	dev-libs/boost
+"
+RDEPEND="${COMMON_DEPEND}
 	$(add_kdebase_dep kdepim-icons)
 "
 
