@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepimlibs/Attic/kdepimlibs-4.7.0.ebuild,v 1.1 2011/07/27 14:04:34 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepimlibs/Attic/kdepimlibs-4.7.0.ebuild,v 1.2 2011/07/31 20:33:33 dilfridge Exp $
 
 EAPI=4
 
@@ -19,9 +19,8 @@ IUSE="debug ldap semantic-desktop"
 # some akonadi tests timeout, that probaly needs more work as its ~700 tests
 RESTRICT="test"
 
-DEPEND="
+COMMON_DEPEND="
 	>=app-crypt/gpgme-1.1.6
-	>=dev-libs/boost-1.35.0-r5
 	dev-libs/libgpg-error
 	>=dev-libs/libical-0.43
 	dev-libs/cyrus-sasl
@@ -33,7 +32,10 @@ DEPEND="
 	)
 	ldap? ( net-nds/openldap )
 "
-RDEPEND="${DEPEND}"
+DEPEND="${COMMON_DEPEND}
+	>=dev-libs/boost-1.35.0-r5
+"
+RDEPEND="${COMMON_DEPEND}"
 
 # libakonadi-kcal moved here from akonadi in 4.3.86
 add_blocker akonadi '<4.3.86'
