@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdepim-runtime
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-runtime/ChangeLog,v 1.44 2011/07/27 14:04:38 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-runtime/ChangeLog,v 1.45 2011/07/31 20:28:37 dilfridge Exp $
+
+  31 Jul 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  kdepim-runtime-4.4.11.1.ebuild:
+  Boost is only DEPEND, bug 368787
 
 *kdepim-runtime-4.7.0 (27 Jul 2011)
 
